Update download links to point to the App Store

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <section class="hero">
             <h1>Your Photo Library,<br>Perfectly Organized</h1>
             <p>Intelligent AI-powered photo analysis to help you identify and remove ugly, blurry, or unwanted images</p>
-            <a href="#" class="cta-button">Download on the App Store</a>
+            <a href="https://apps.apple.com/de/app/picpurge/id6753171855" class="cta-button">Download on the App Store</a>
         </section>
 
         <section class="features">
@@ -345,7 +345,7 @@
         <section class="hero">
             <h1>Ready to Declutter?</h1>
             <p>Start organizing your photo library today</p>
-            <a href="#" class="cta-button">Download Now</a>
+            <a href="https://apps.apple.com/de/app/picpurge/id6753171855" class="cta-button">Download Now</a>
         </section>
 
         <footer>
