--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PicPurge - Smart Photo Cleanup for iOS</title>
     <style>
+        :root {
+            color-scheme: light dark;
+            --background-color: #06080f;
+            --text-color: #f5f5f7;
+            --muted-text-color: rgba(245, 245, 247, 0.75);
+            --card-background: rgba(255, 255, 255, 0.08);
+            --section-background: rgba(255, 255, 255, 0.04);
+            --border-color: rgba(255, 255, 255, 0.08);
+            --shadow-color: rgba(15, 23, 42, 0.45);
+        }
+
+        @media (prefers-color-scheme: light) {
+            :root {
+                --background-color: #f5f5f7;
+                --text-color: #0b0d15;
+                --muted-text-color: rgba(11, 13, 21, 0.7);
+                --card-background: #ffffff;
+                --section-background: #eef2ff;
+                --border-color: rgba(15, 23, 42, 0.08);
+                --shadow-color: rgba(15, 23, 42, 0.12);
+            }
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -13,9 +36,10 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: #000;
-            color: #fff;
+            background: var(--background-color);
+            color: var(--text-color);
             overflow-x: hidden;
+            transition: background 0.4s ease, color 0.4s ease;
         }
 
         .container {
@@ -75,8 +99,8 @@
 
         .tagline {
             font-size: 1.3em;
-            opacity: 0.9;
             font-weight: 300;
+            color: var(--muted-text-color);
         }
 
         .hero {
@@ -93,9 +117,9 @@
 
         .hero p {
             font-size: 1.4em;
-            opacity: 0.95;
             margin-bottom: 40px;
             animation: fadeInUp 0.8s ease-out 0.2s both;
+            color: var(--muted-text-color);
         }
 
         @keyframes fadeInUp {
@@ -125,116 +149,117 @@
 
         .cta-button:hover {
             transform: translateY(-3px);
-            box-shadow: 0 15px 40px rgba(245, 87, 108, 0.6);
+            box-shadow: 0 15px 35px rgba(245, 87, 108, 0.5);
+        }
+
+        .features {
+            padding: 80px 0;
+            background: var(--section-background);
+            border-radius: 40px;
+            margin-top: 40px;
+            border: 1px solid var(--border-color);
+            transition: background 0.4s ease, border-color 0.4s ease;
+        }
+
+        .features h2 {
+            text-align: center;
+            font-size: 2.8em;
+            margin-bottom: 40px;
+        }
+
+        .feature-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+            gap: 30px;
+        }
+
+        .feature {
+            background: var(--card-background);
+            padding: 30px;
+            border-radius: 24px;
+            box-shadow: 0 10px 30px var(--shadow-color);
+            border: 1px solid var(--border-color);
+            transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.4s ease;
+        }
+
+        .feature:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 20px 40px rgba(240, 147, 251, 0.18);
+        }
+
+        .feature-icon {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+
+        .feature h3 {
+            font-size: 1.6em;
+            margin-bottom: 10px;
+        }
+
+        .feature p {
+            margin-top: 12px;
+            line-height: 1.6;
+            color: var(--muted-text-color);
         }
 
         .screenshots {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
             gap: 30px;
             padding: 80px 0;
         }
 
         .screenshot-card {
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(10px);
-            border-radius: 20px;
-            padding: 30px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            background: var(--card-background);
+            padding: 35px;
+            border-radius: 28px;
+            box-shadow: 0 12px 35px var(--shadow-color);
+            border: 1px solid var(--border-color);
+            transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.4s ease;
         }
 
         .screenshot-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 20px 40px rgba(240, 147, 251, 0.2);
-            border-color: rgba(240, 147, 251, 0.3);
+            transform: translateY(-5px);
+            box-shadow: 0 20px 45px rgba(240, 147, 251, 0.2);
         }
 
         .screenshot-card h3 {
-            font-size: 1.5em;
-            margin-bottom: 15px;
+            font-size: 1.6em;
+            margin-bottom: 12px;
         }
 
         .screenshot-card p {
-            opacity: 0.9;
+            margin-top: 12px;
             line-height: 1.6;
-        }
-
-        .features {
-            padding: 80px 0;
-            text-align: center;
-        }
-
-        .features h2 {
-            font-size: 2.5em;
-            margin-bottom: 60px;
-        }
-
-        .feature-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 40px;
-        }
-
-        .feature {
-            background: rgba(255, 255, 255, 0.03);
-            backdrop-filter: blur(10px);
-            border-radius: 20px;
-            padding: 40px 30px;
-            border: 1px solid rgba(255, 255, 255, 0.08);
-            transition: all 0.3s ease;
-        }
-
-        .feature:hover {
-            background: rgba(255, 255, 255, 0.08);
-            transform: scale(1.05);
-            border-color: rgba(240, 147, 251, 0.3);
-        }
-
-        .feature-icon {
-            font-size: 3em;
-            margin-bottom: 20px;
-        }
-
-        .feature h3 {
-            font-size: 1.4em;
-            margin-bottom: 15px;
-        }
-
-        .feature p {
-            opacity: 0.85;
-            line-height: 1.6;
+            color: var(--muted-text-color);
         }
 
         .privacy-section {
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(10px);
-            border-radius: 30px;
-            padding: 60px;
             margin: 80px 0;
-            border: 2px solid rgba(240, 147, 251, 0.2);
+            padding: 60px 60px;
+            background: var(--section-background);
+            border-radius: 36px;
+            border: 1px solid var(--border-color);
+            box-shadow: 0 20px 40px var(--shadow-color);
+            transition: background 0.4s ease, border-color 0.4s ease;
         }
 
         .privacy-section h2 {
-            font-size: 2.5em;
-            margin-bottom: 30px;
-            text-align: center;
+            font-size: 2.4em;
         }
 
         .privacy-section p {
-            font-size: 1.2em;
+            margin-top: 20px;
             line-height: 1.8;
-            opacity: 0.95;
-            text-align: center;
-            max-width: 800px;
-            margin: 0 auto;
+            color: var(--muted-text-color);
         }
 
         footer {
-            text-align: center;
             padding: 40px 0;
-            opacity: 0.7;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            text-align: center;
+            font-size: 0.95em;
+            color: var(--muted-text-color);
         }
 
         @media (max-width: 768px) {
